Add some accessibility features to the settings pane
The links in the settings pane can now all be accessed through pushing
the tab keys.  Pushing either enter or spacebar when over those links
will now fire the on-tap handler as well.

This also adds a small highlight to the update and reset buttons when
they are focused since paper-button does not do so by default.

Fixes #929

--- a/src/generic_ui/polymer/faq-link.html
+++ b/src/generic_ui/polymer/faq-link.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../lib/polymer/polymer.html">
+<link rel='import' href='link.html'>
 
 <!--
 
@@ -12,14 +13,9 @@ a new tab linking to faq.html#privacy
 <polymer-element name='uproxy-faq-link' attributes='anchor'>
 
   <template>
-    <style>
-      span {
-        cursor: pointer;
-      }
-    </style>
-
-    <span on-click='{{ openFaq }}'><content></content></span>
-
+    <uproxy-link role='link' on-tap='{{ openFaq }}'>
+      <content></content>
+    </uproxy-link>
   </template>
 
   <script src='faq-link.js'></script>
