--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -3,7 +3,8 @@
 <link rel='import' href='../lib/paper-input/paper-input-decorator.html'>
 <link rel='import' href='../lib/core-icons/core-icons.html'>
 <link rel="import" href='description.html'>
-<link rel="import" href='faq-link.html'>
+<link rel="import" href="faq-link.html">
+<link rel='import' href='link.html'>
 
 <polymer-element name='uproxy-settings'>
 
@@ -45,6 +46,7 @@
       padding-left: 32px;
       line-height: 32px;
       color: rgb(112, 112, 112);
+      display: block;
     }
     #descriptionWrapper {
       padding-left: 32px;
@@ -71,6 +73,9 @@
       background: #009688;  /* dark green */
       color: white;
       width: 70px;
+    }
+    paper-button:focus {
+      border: 1px solid #008074;
     }
     paper-input-decorator {
       max-width: 60%;
@@ -113,22 +118,29 @@
         Device description
         <uproxy-description></uproxy-description>
       </div>
-      <div class='actionLink' on-tap='{{toggleAdvancedSettings}}'>
+      <uproxy-link class='actionLink' on-tap='{{ toggleAdvancedSettings }}' role='button'>
         Advanced Settings
         <core-icon icon="expand-more" hidden?='{{displayAdvancedSettings}}'></core-icon>
         <core-icon icon="expand-less" hidden?='{{!displayAdvancedSettings}}'></core-icon>
-      </div>
+      </uproxy-link>
       <div id='advancedSettings' hidden?='{{!displayAdvancedSettings}}'>
         <paper-input-decorator label="Custom STUN server">
           <input is="core-input" value='{{stunServer}}'>
         </paper-input-decorator>
-         <paper-button on-tap="{{setStunServer}}">Update</paper-button> <paper-button on-tap="{{resetStunServers}}">Reset</paper-button><br><br>
+        <paper-button class='button' on-tap="{{setStunServer}}">Update</paper-button>
+        <paper-button class='button' on-tap="{{resetStunServers}}">Reset</paper-button>
+        <br><br>
         <p id='confirmNewServer' class='advancedSettingsText' hidden>STUN server updated. New server will be used for future connections.</p>
         <p id='confirmResetServers' class='advancedSettingsText' hidden>STUN servers reset. Default servers will be used for future connections.</p>
       </div>
+
       <uproxy-faq-link class='actionLink'>Get Help</uproxy-faq-link>
-      <div class='actionLink' on-tap='{{logOut}}'>Log-out of uProxy</div>
-      <div class='actionLink' on-tap='{{restart}}' hidden?='{{browser!=="chrome"}}'>Restart</div>
+      <uproxy-link class='actionLink' on-tap='{{ logOut }}' role='button'>
+        Log-out of uProxy
+      </uproxy-link>
+      <uproxy-link class='actionLink' on-tap='{{ restart }}' hidden?='{{ browser !== "chrome" }}' role='button'>
+        Restart
+      </uproxy-link>
     </div>
 
   </template>
