small ui changes

--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -27,6 +27,7 @@
     }
     #description {
       color: #333;
+      margin-bottom: 0;
     }
     core-icon[icon=query-builder] {
       height: 16px;
