--- a/src/generic_ui/polymer/logs.html
+++ b/src/generic_ui/polymer/logs.html
@@ -51,7 +51,7 @@
     </style>
 
     <div id='container'>
-      <h1>Logs & Network Diagnostics</h1>
+      <h1>Logs & Network Analysis</h1>
 
       <!--
       <paper-button raised id='diagnose' on-tap='{{ getNetworkInfo }}'>
@@ -61,7 +61,7 @@
 
       <div id='logs'>
         <div id='loadingLogs' hidden?='{{ !loadingLogs }}'>
-          <p>Retrieving logs and diagnosing your network...</p>
+          <p>Retrieving logs and analyzing your network...</p>
           <paper-progress indeterminate='true'></paper-progress>
         </div>
         <pre>{{ logs }}</pre>
