First attempt at NAT error

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -15,6 +15,7 @@
 <link rel='import' href='copypaste.html'>
 <link rel='import' href='bubble.html'>
 <link rel='import' href='feedback.html'>
+<link rel='import' href='troubleshoot.html'>
 <link rel='import' href='browser-elements.html'>
 
 <polymer-element name='uproxy-root' attributes='model' on-update-view='{{ updateView }}' on-open-dialog='{{ openDialog }}'>
@@ -246,6 +247,8 @@
         </paper-button>
       </template>
     </paper-action-dialog>
+
+    <uproxy-troubleshoot></uproxy-troubleshoot>
 
   </template>
 
